--- a/views/passport/page-personal.hbs
+++ b/views/passport/page-personal.hbs
@@ -1,5 +1,5 @@
 <div>
-  <div class="prueba">
+  <div class="titlePagePersonal">
     <h2>Hellow {{user.name}}, what are you looking for!!</h2>
   </div>
   <div class="row">
