--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,11 +98,11 @@ h1 {
   padding: 20px 2px; }
 
 a {
-  color: #404040;
+  color: #76b852;
   text-decoration: none; }
 
 a:hover {
-  color: #101010; }
+  color: #fff; }
 
 .sidebar {
   width: 30%;
@@ -523,6 +523,11 @@ h5 {
 .colorVerde {
   color: #76b852; }
 
+.colorVerdeOscuro {
+  font-family: "Pacifico", cursive;
+  color: #064123;
+  font-weight: normal; }
+
 .fondoVerde {
   background-color: #04271d; }
 
@@ -551,6 +556,21 @@ h5 {
   align-items: center;
   justify-content: center;
   margin: 3%;
+  padding: 1%; }
+
+.footer {
+  position: relative;
+  z-index: 1;
+  max-width: 300px;
+  margin: 0 auto;
+  color: #76b852; }
+
+.titleError {
+  color: #76b852;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1%;
   padding: 1%; }
 
 .logo {
@@ -600,5 +620,14 @@ ul.actions li {
   display: inline-block;
   padding: 0 1em 0 0;
   vertical-align: middle; }
+
+.prueba {
+  width: 740px;
+  height: 314px;
+  display: block;
+  margin: auto;
+  background-image: url(../images/404.gif);
+  background-size: 100% auto;
+  background-repeat: no-repeat; }
 
 /*# sourceMappingURL=style.css.map */
