--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -108,12 +108,12 @@ h1 {
 }
 
 a {
-  color: #404040;
+  color: #76b852;
   text-decoration: none;
 }
 
 a:hover {
-  color: #101010;
+  color: #fff;
 }
 
 .sidebar {
@@ -606,6 +606,11 @@ h5 {
 .colorVerde {
   color: #76b852;
 }
+.colorVerdeOscuro {
+  font-family: "Pacifico", cursive;
+  color: #064123;
+  font-weight: normal;
+}
 
 .fondoVerde {
   background-color: #04271d;
@@ -642,7 +647,22 @@ h5 {
   margin: 3%;
   padding: 1%;
 }
+.footer {
+  position: relative;
+  z-index: 1;
+  max-width: 300px;
+  margin: 0 auto;
+  color: #76b852;
+}
 
+.titleError {
+  color: #76b852;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1%;
+  padding: 1%;
+}
 //NUEVO PARA INDEX
 
 .logo {
@@ -698,4 +718,14 @@ ul.actions li {
   display: inline-block;
   padding: 0 1em 0 0;
   vertical-align: middle;
+}
+
+.prueba {
+  width: 740px;
+  height: 314px;
+  display: block;
+  margin: auto;
+  background-image: url(../images/404.gif);
+  background-size: 100% auto;
+  background-repeat: no-repeat;
 }
