--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -1,4 +1,10 @@
-<div class="titlePagePersonal">
-  <h1>404 Error</h1>
-  <h2>This route does not exist on the app! Check if everything is ok!</h2>
+<div>
+  <div class="titleError">
+    <h2>404 Error</h2>
+  </div>
+  <div class="titleError">
+    <h2>This route does not exist on the app! Check if everything is ok!</h2>
+  </div>
+  <div class="prueba">
+  </div>
 </div>
