--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<!-- Footer -->
+{{!-- <!-- Footer -->
 <footer class="page-footer font-small blue">
 
   <!-- Copyright -->
@@ -6,5 +6,46 @@
   </div>
   <!-- Copyright -->
 
+</footer>
+<!-- Footer --> --}}
+<!-- Footer -->
+<footer class="page-footer font-medium special-color-dark pt-4">
+
+  <!-- Footer Elements -->
+  <div class="footer">
+
+
+    <!-- Social buttons -->
+    <ul class="list-unstyled list-inline text-center">
+      <li class="list-inline-item">
+        <a class="btn-floating btn-fb mx-1" href="https://es-es.facebook.com/">
+          <i class="fab fa-facebook-f"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-tw mx-1" href="https://twitter.com/?lang=es">
+          <i class="fab fa-twitter"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-gplus mx-1" href="https://github.com/Project2-Iron/ThrowMyTrash/tree/master">
+          <i class="fab fa-github"></i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-li mx-1" href="https://www.linkedin.com/in/miguelalonsog/">
+          <i class="fab fa-linkedin-in"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-dribbble mx-1" href="https://www.linkedin.com/in/ivanestebani/">
+          <i class="fab fa-linkedin-in"> </i>
+        </a>
+      </li>
+    </ul>
+    <!-- Social buttons -->
+
+  </div>
+  <!-- Footer Elements -->
 </footer>
 <!-- Footer -->
