--- a/views/passport/cleanPoints.hbs
+++ b/views/passport/cleanPoints.hbs
@@ -21,3 +21,4 @@
 </div>
 <script src="/javascripts/mapcpoints.js"></script>
 {{!-- <script src="/javascripts/mapfavourites.js"></script> --}}
+{{>footer}}
