--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -9,22 +9,22 @@
       {{#if user}}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-          aria-expanded="false"><b>{{user.name}}</b></a>
+          aria-expanded="false"><b class="colorVerdeOscuro">{{user.name}}</b></a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="/page-personal">Profile</a>
-          <a class="dropdown-item" href="/favourites">Favourites</a>
-          <a class="dropdown-item" href="/bookings">Bookings</a>
-          <a class="dropdown-item" href="/info">Change info</a>
-          <div role="separator" class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/logout">Logout</a>
+          <a class="dropdown-item colorVerdeOscuro" href="/page-personal">Profile</a>
+          <a class="dropdown-item colorVerdeOscuro" href="/favourites">Favourites</a>
+          <a class="dropdown-item colorVerdeOscuro" href="/bookings">Bookings</a>
+          <a class="dropdown-item colorVerdeOscuro" href="/info">Change info</a>
+          <div role="separator" class="dropdown-divider colorVerde"></div>
+          <a class="dropdown-item colorVerdeOscuro" href="/logout">Logout</a>
         </div>
       </li>
       {{else}}
       <li class="nav-item">
-        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link colorVerdeOscuro" href="/login"><b class="colorVerdeOscuro">Login</b></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
+        <a class="nav-link colorVerdeOscuro" href="/about"><b class="colorVerdeOscuro">About</b></a>
       </li>
       {{/if}}
     </ul>
