--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -544,7 +544,6 @@ h5 {
   color: red;
   font-size: large; }
 
-<<<<<<< HEAD
 .logo {
   font-family: "Pacifico", cursive;
   height: inherit;
@@ -592,10 +591,9 @@ ul.actions li {
   display: inline-block;
   padding: 0 1em 0 0;
   vertical-align: middle; }
-=======
-.cardPersonal {
-  align-items: center;
-  background-color: #04271d; }
+  ul.actions li .cardPersonal {
+    align-items: center;
+    background-color: #04271d; }
 
 .prueba {
   color: #76b852;
@@ -603,6 +601,5 @@ ul.actions li {
   justify-content: center;
   margin: 3%;
   padding: 1%; }
->>>>>>> 17b7e41b738dc556b6e28f4142097bcc525133d5
 
 /*# sourceMappingURL=style.css.map */
