--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -621,7 +621,7 @@ ul.actions li {
   padding: 0 1em 0 0;
   vertical-align: middle; }
 
-.prueba {
+.imagenTanos {
   width: 740px;
   height: 314px;
   display: block;
