--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -5,6 +5,6 @@
   <div class="titleError">
     <h2>This route does not exist on the app! Check if everything is ok!</h2>
   </div>
-  <div class="imagenTanos">
+  <div class="prueba">
   </div>
 </div>
