--- a/views/passport/page-personal.hbs
+++ b/views/passport/page-personal.hbs
@@ -2,7 +2,7 @@
   <div class="titlePagePersonal">
     <h2>Hellow {{user.name}}, what are you looking for!!</h2>
   </div>
-  <div>
+  <div class="prueba">
     <div class="row">
       <div class="col-sm-6">
         <div class="card cardPersonal">
