--- a/views/passport/about.hbs
+++ b/views/passport/about.hbs
@@ -1,2 +1,57 @@
-<h2>About</h2>
+<div id="about">
+  <header>
+    <h2>About us!</h2>
+  </header>
+  <p>This is the second project of the Web Development Bootcamp in Ironhack. It's been made by Miguel Alonso and Ivan
+    Esteban. We want the people to know where is the closest place to throw any kind of litter</p>
+</div>
+
+<div id="follow">
+  <header>
+    <h2>Follow us!</h2>
+  </header>
+</div>
+<div class="followcards">
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.</p>
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
+
+
+{{!-- <section id="one">
+  <div class="inner">
+    <header>
+      <h2>Magna Etiam Lorem</h2>
+    </header>
+    <p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer
+      adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non,
+      congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc
+      iaculis mi in ante.</p>
+    <ul class="actions">
+      <li><a href="#" class="button alt">Learn More</a></li>
+    </ul>
+  </div>
+</section> --}}
+
+
 {{>footer}}
