--- a/views/passport/bookings.hbs
+++ b/views/passport/bookings.hbs
@@ -1,8 +1,8 @@
 <div>
   {{!-- <img style=" position:absolute ;width:100%; height:125%;" src="../images/reservates.jpg" /> --}}
   <div class="topOfReservates">
-    <div class="title-info ">
-      <h2><b> Collection Requirements</b></h2>
+    <div class="title-info pacific-font">
+      <h2>Collection Requirements</h2>
     </div>
     <div>
       <ul>
@@ -49,8 +49,8 @@
     </div>
     <div>
       <div class="formOfReservate">
-        <div class="title-info">
-          <h2><b>Create your pickup</b></h2>
+        <div class="title-info pacific-font">
+          <h2>Create your pickup</h2>
         </div>
         <form method="POST" class="login-form" action="/bookings">
           <div>
