--- a/views/passport/favourites.hbs
+++ b/views/passport/favourites.hbs
@@ -1,5 +1,5 @@
 <div>
-  <div class="title-info colorVerde">
+  <div class="title-info colorVerde pacific-font">
     <h2>These are your current favourites clean points</h2>
   </div>
   <div>
