--- a/views/passport/info.hbs
+++ b/views/passport/info.hbs
@@ -3,7 +3,7 @@
   <div class="login-page">
     {{#with user}}
     <div class="form">
-      <div class="title-info ">
+      <div class="title-info pacific-font">
         <h2>Change your Info</h2>
       </div>
       <form method="POST" action="/info/{{this._id}}">
