--- a/views/passport/page-personal.hbs
+++ b/views/passport/page-personal.hbs
@@ -1,6 +1,6 @@
 <div>
-  <div class="titlePagePersonal">
-    <h2>Hellow {{user.name}}, what are you looking for!!</h2>
+  <div class="titlePagePersonal pacific-font">
+    <h2>Hello {{user.name}}, what do you whant to throw?</h2>
   </div>
   <div class="prueba">
     <div class="row">
