--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -1,8 +1,8 @@
 <div>
-  <div class="titleError">
-    <h2>404 Error</h2>
+  <div class="titleError pacific-font">
+    <h2>¡404 Error!</h2>
   </div>
-  <div class="titleError">
+  <div class="titleError pacific-font">
     <h2>This route does not exist on the app! Check if everything is ok!</h2>
   </div>
   <div class="imagenTanos">
