--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -461,6 +461,7 @@ h4 {
   background-clip: none;
   border: 0;
   border-radius: none;
+  margin-top: 2%;
 }
 
 .title-info {
@@ -487,6 +488,10 @@ h5 {
 .dropdown-menu {
   right: 0;
   left: unset;
+}
+
+.titleOfFavourites {
+  margin-top: 2%;
 }
 
 .box {
