--- a/views/passport/about.hbs
+++ b/views/passport/about.hbs
@@ -7,51 +7,43 @@
 </div>
 
 <div id="follow">
-  <header>
+  <div>
     <h2>Follow us!</h2>
-  </header>
+  </div>
 </div>
-<div class="followcards">
-  <div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+
+<div>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card cardPersonal colors">
+        <h2 class="card-title pacific-font">Ivan Esteban </h2>
+        <div class="card-body fondoVerde">
+          <a href="https://github.com/Donivanes" class="btn btn-outline-dark my-2 my-sm-0 botonVerde colors">GitHub <i
+              class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/ivanestebani/"
+            class="btn btn-outline-dark my-2 my-sm-0 botonVerde colors">LinkedIn <i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
     </div>
-    <div class="card" style="width: 18rem;">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+    <div class="col-sm-6">
+      <div class="card cardPersonal colors">
+        <h2 class="card-title pacific-font">Miguel Alonso </h2>
+        <div class="card-body fondoVerde">
+          <a href="https://github.com/malonsogallardo"
+            class="btn btn-outline-dark my-2 my-sm-0 botonVerde colors">GitHub <i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/miguelalonsog/"
+            class="btn btn-outline-dark my-2 my-sm-0 botonVerde colors">LinkedIn <i class="fab fa-linkedin-in"></i></a>
+        </div>
       </div>
     </div>
   </div>
-
 </div>
 
 
 
 
-{{!-- <section id="one">
-  <div class="inner">
-    <header>
-      <h2>Magna Etiam Lorem</h2>
-    </header>
-    <p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer
-      adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non,
-      congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc
-      iaculis mi in ante.</p>
-    <ul class="actions">
-      <li><a href="#" class="button alt">Learn More</a></li>
-    </ul>
-  </div>
-</section> --}}
+
+
 
 
 {{>footer}}
