--- a/views/passport/maps.hbs
+++ b/views/passport/maps.hbs
@@ -8,7 +8,7 @@
         <div class="card cardPersonal">
           <img style="width:50%; height:50%;" class="card-img-top" src="../images/battery.jpg" />
           <div class="card-body fondoVerde">
-            <a href="/page-personal/battery" class="btn btn-outline-dark my-2 my-sm-0 botonVerde">Batteries</a>
+            <a href="/maps/battery" class="btn btn-outline-dark my-2 my-sm-0 botonVerde">Batteries</a>
           </div>
         </div>
       </div>
@@ -16,7 +16,7 @@
         <div class="card cardPersonal">
           <img style="width:50%; height:50%;" src="../images/clothes.jpg" />
           <div class="card-body fondoVerde">
-            <a href="/page-personal/clothes" class="btn btn-outline-dark my-2 my-sm-0 botonVerde">Clothes</a>
+            <a href="/maps/clothes" class="btn btn-outline-dark my-2 my-sm-0 botonVerde">Clothes</a>
           </div>
         </div>
       </div>
@@ -24,7 +24,7 @@
         <div class="card cardPersonal">
           <img style="width:50%; height:50%;" src="../images/oil.jpg" />
           <div class="card-body fondoVerde">
-            <a href="/page-personal/vegetalOil" class="btn btn-outline-dark my-2 my-sm-0 botonVerde">Vegetal Oil</a>
+            <a href="/maps/vegetalOil" class="btn btn-outline-dark my-2 my-sm-0 botonVerde">Vegetal Oil</a>
           </div>
         </div>
       </div>
@@ -32,7 +32,7 @@
         <div class="card cardPersonal">
           <img style="width:50%; height:50%;" src="../images/cpoint.jpg" />
           <div class="card-body fondoVerde">
-            <a href="/page-personal/cleanPoints" class="btn btn-outline-dark my-2 my-sm-0 botonVerde">R.Points</a>
+            <a href="/maps/cleanPoints" class="btn btn-outline-dark my-2 my-sm-0 botonVerde">R.Points</a>
           </div>
         </div>
       </div>
