--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand logo" href="/">Throw My Trash! </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -11,7 +11,7 @@
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
           aria-expanded="false"><b class="colorVerdeOscuro">{{user.name}}</b></a>
         <div class="dropdown-menu">
-          <a class="dropdown-item colorVerdeOscuro" href="/page-personal">Profile</a>
+          <a class="dropdown-item colorVerdeOscuro" href="/maps">Maps</a>
           <a class="dropdown-item colorVerdeOscuro" href="/favourites">Favourites</a>
           <a class="dropdown-item colorVerdeOscuro" href="/bookings">Bookings</a>
           <a class="dropdown-item colorVerdeOscuro" href="/info">Change info</a>
